[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Map1.gd" type="Script" id=1]
[ext_resource path="res://Assets/environment/layers/background.png" type="Texture" id=2]
[ext_resource path="res://Assets/environment/layers/middleground.png" type="Texture" id=3]
[ext_resource path="res://Node/TileMap.tscn" type="PackedScene" id=4]
[ext_resource path="res://Node/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Node/Snail.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/sprites/misc/chest/chest-1.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 48 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 192, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 48 )

[node name="Node2D" type="Node2D"]
position = Vector2( 16, 1520 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 394, 813 )
scale = Vector2( 5.9375, 7.30833 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 394, 812.5 )
scale = Vector2( 2.96875, 7.30416 )
texture = ExtResource( 3 )

[node name="TileMap" parent="." instance=ExtResource( 4 )]
position = Vector2( -368, 1136 )
tile_data = PoolIntArray( -4521962, 0, 0, -4521961, 0, 0, -4521960, 0, 0, -4521959, 0, 0, -4521958, 0, 0, -4521957, 0, 0, -4521956, 0, 0, -4521955, 0, 0, -4521954, 0, 0, -4521953, 0, 0, -4521952, 0, 0, -4521951, 0, 0, -4521950, 0, 0, -4521949, 0, 0, -4521948, 0, 0, -4521947, 0, 0, -4521946, 0, 0, -4521945, 0, 0, -4521944, 0, 0, -4521943, 0, 0, -4521942, 0, 0, -4521941, 0, 0, -4521940, 0, 0, -4456426, 0, 0, -4456404, 0, 0, -4390890, 0, 0, -4390868, 0, 0, -4325354, 0, 0, -4325332, 0, 0, -4259818, 0, 0, -4259796, 0, 0, -4194282, 0, 0, -4194260, 0, 0, -4128746, 0, 0, -4128724, 0, 0, -4063210, 0, 0, -4063209, 0, 0, -4063208, 0, 0, -4063207, 0, 0, -4063206, 0, 0, -4063205, 0, 0, -4063204, 0, 0, -4063203, 0, 0, -4063202, 0, 0, -4063201, 0, 0, -4063200, 0, 0, -4063199, 0, 0, -4063198, 0, 0, -4063197, 0, 0, -4063196, 0, 0, -4063195, 0, 0, -4063190, 0, 0, -4063189, 0, 0, -4063188, 0, 0, -3997674, 0, 0, -3997652, 0, 0, -3932138, 0, 0, -3932116, 0, 0, -3866602, 0, 0, -3866580, 0, 0, -3801066, 0, 0, -3801044, 0, 0, -3735530, 0, 0, -3735508, 0, 0, -3669994, 0, 0, -3669979, 0, 0, -3669978, 0, 0, -3669972, 0, 0, -3604458, 0, 0, -3604448, 1, 0, -3604447, 1, 0, -3604436, 0, 0, -3538922, 0, 0, -3538900, 0, 0, -3473386, 0, 0, -3473364, 0, 0, -3407850, 0, 0, -3407828, 0, 0, -3342314, 0, 0, -3342292, 0, 0, -3276778, 0, 0, -3276774, 0, 0, -3276773, 0, 0, -3276756, 0, 0, -3211242, 0, 0, -3211220, 0, 0, -3145706, 0, 0, -3145684, 0, 0, -3080170, 0, 0, -3080148, 0, 0, -3014634, 0, 0, -3014612, 0, 0, -2949098, 0, 0, -2949087, 0, 0, -2949086, 0, 0, -2949085, 0, 0, -2949076, 0, 0, -2883562, 0, 0, -2883543, 0, 0, -2883542, 0, 0, -2883541, 0, 0, -2883540, 0, 0, -2818026, 0, 0, -2818004, 0, 0, -2752490, 0, 0, -2752468, 0, 0, -2752467, 0, 0, -2752466, 0, 0, -2752465, 0, 0, -2752464, 0, 0, -2752463, 0, 0, -2752462, 0, 0, -2752461, 0, 0, -2752460, 0, 0, -2752459, 0, 0, -2752458, 0, 0, -2752457, 0, 0, -2752456, 0, 0, -2686954, 0, 0, -2686920, 0, 0, -2621418, 0, 0, -2621384, 0, 0, -2555882, 0, 0, -2555878, 0, 0, -2555877, 0, 0, -2555876, 0, 0, -2555875, 0, 0, -2555848, 0, 0, -2490346, 0, 0, -2490312, 0, 0, -2424810, 0, 0, -2424776, 0, 0, -2359274, 0, 0, -2359240, 0, 0, -2293738, 0, 0, -2293727, 0, 0, -2293726, 0, 0, -2293725, 0, 0, -2293716, 0, 0, -2293715, 0, 0, -2293714, 0, 0, -2293704, 0, 0, -2228202, 0, 0, -2228178, 0, 0, -2228168, 0, 0, -2162666, 0, 0, -2162642, 0, 0, -2162632, 0, 0, -2097130, 0, 0, -2097106, 0, 0, -2097098, 0, 0, -2097097, 0, 0, -2097096, 0, 0, -2031594, 0, 0, -2031570, 0, 0, -2031560, 0, 0, -1966058, 0, 0, -1966034, 0, 0, -1966024, 0, 0, -1900522, 0, 0, -1900498, 0, 0, -1900488, 0, 0, -1900487, 0, 0, -1900486, 0, 0, -1900485, 0, 0, -1900484, 0, 0, -1900483, 0, 0, -1900482, 0, 0, -1900481, 0, 0, -1900480, 0, 0, -1900479, 0, 0, -1900478, 0, 0, -1900477, 0, 0, -1900476, 0, 0, -1900475, 0, 0, -1900474, 0, 0, -1900473, 0, 0, -1900472, 0, 0, -1900471, 0, 0, -1900470, 0, 0, -1834986, 0, 0, -1834962, 0, 0, -1834934, 0, 0, -1769450, 0, 0, -1769426, 0, 0, -1769398, 0, 0, -1703914, 0, 0, -1703890, 0, 0, -1703889, 0, 0, -1703888, 0, 0, -1703887, 0, 0, -1703862, 0, 0, -1638378, 0, 0, -1638354, 0, 0, -1638326, 0, 0, -1572842, 0, 0, -1572818, 0, 0, -1572790, 0, 0, -1507306, 0, 0, -1507282, 0, 0, -1507254, 0, 0, -1441770, 0, 0, -1441746, 0, 0, -1441718, 0, 0, -1376234, 0, 0, -1376210, 0, 0, -1376209, 0, 0, -1376208, 0, 0, -1376207, 0, 0, -1376206, 0, 0, -1376205, 0, 0, -1376204, 0, 0, -1376203, 0, 0, -1376202, 0, 0, -1376201, 0, 0, -1376200, 0, 0, -1376199, 0, 0, -1376198, 0, 0, -1376197, 0, 0, -1376196, 0, 0, -1376195, 0, 0, -1376182, 0, 0, -1310698, 0, 0, -1310668, 0, 0, -1310659, 0, 0, -1310646, 0, 0, -1245162, 0, 0, -1245132, 0, 0, -1245123, 0, 0, -1245110, 0, 0, -1179626, 0, 0, -1179596, 0, 0, -1179587, 0, 0, -1179574, 0, 0, -1114090, 0, 0, -1114060, 0, 0, -1114051, 0, 0, -1114038, 0, 0, -1048554, 0, 0, -1048524, 0, 0, -1048523, 0, 0, -1048522, 0, 0, -1048521, 0, 0, -1048520, 0, 0, -1048519, 0, 0, -1048518, 0, 0, -1048517, 0, 0, -1048516, 0, 0, -1048515, 0, 0, -1048514, 0, 0, -1048513, 0, 0, -1048512, 0, 0, -1048511, 0, 0, -1048502, 0, 0, -983018, 0, 0, -982966, 0, 0, -917482, 0, 0, -917430, 0, 0, -851946, 0, 0, -851894, 0, 0, -786410, 0, 0, -786360, 0, 0, -786359, 0, 0, -786358, 0, 0, -720874, 0, 0, -720822, 0, 0, -655338, 0, 0, -655324, 0, 0, -655323, 0, 0, -655318, 0, 0, -655317, 0, 0, -655286, 0, 0, -589802, 0, 0, -589750, 0, 0, -524266, 0, 0, -524258, 1, 0, -524257, 0, 0, -524214, 0, 0, -458730, 0, 0, -458700, 0, 0, -458699, 0, 0, -458698, 0, 0, -458697, 0, 0, -458686, 0, 0, -458685, 0, 0, -458684, 0, 0, -458683, 0, 0, -458682, 0, 0, -458681, 0, 0, -458680, 0, 0, -458679, 0, 0, -458678, 0, 0, -393194, 0, 0, -393161, 0, 0, -393150, 1, 0, -327658, 0, 0, -327625, 0, 0, -327614, 1, 0, -262122, 0, 0, -262089, 0, 0, -262078, 1, 0, -196586, 0, 0, -196553, 0, 0, -196547, 0, 0, -196546, 1, 0, -196545, 1, 0, -196544, 1, 0, -196543, 1, 0, -196542, 1, 0, -131050, 0, 0, -131017, 0, 0, -131011, 0, 0, -65514, 0, 0, -65513, 0, 0, -65512, 0, 0, -65511, 0, 0, -65510, 0, 0, -65481, 0, 0, -65475, 0, 0, 22, 0, 0, 55, 0, 0, 61, 0, 0, 65558, 0, 0, 65591, 0, 0, 65597, 0, 0, 131094, 0, 0, 131127, 0, 0, 131133, 0, 0, 196630, 0, 0, 196663, 0, 0, 196669, 0, 0, 262166, 0, 0, 262178, 0, 0, 262179, 0, 0, 262182, 0, 0, 262183, 0, 0, 262188, 0, 0, 262199, 0, 0, 262205, 0, 0, 327702, 0, 0, 327735, 0, 0, 327741, 0, 0, 393238, 0, 0, 393271, 0, 0, 393277, 0, 0, 458774, 0, 0, 458807, 0, 0, 458813, 0, 0, 524310, 0, 0, 524341, 0, 0, 524342, 0, 0, 524343, 0, 0, 524349, 0, 0, 589846, 0, 0, 589879, 0, 0, 589885, 0, 0, 655382, 0, 0, 655415, 0, 0, 655421, 0, 0, 720918, 0, 0, 720951, 0, 0, 720957, 0, 0, 786454, 1, 0, 786487, 0, 0, 786493, 0, 0, 851990, 1, 0, 852004, 0, 0, 852005, 0, 0, 852006, 0, 0, 852012, 0, 0, 852023, 1, 0, 852029, 0, 0, 917526, 1, 0, 917565, 0, 0, 983062, 1, 0, 983101, 0, 0, 1048598, 1, 0, 1048637, 0, 0, 1114134, 1, 0, 1114173, 0, 0, 1179670, 1, 0, 1179671, 0, 0, 1179672, 0, 0, 1179673, 0, 0, 1179674, 0, 0, 1179675, 0, 0, 1179676, 0, 0, 1179709, 0, 0, 1245206, 1, 0, 1245245, 0, 0, 1310742, 1, 0, 1310781, 0, 0, 1376278, 1, 0, 1376317, 0, 0, 1441814, 1, 0, 1441853, 0, 0, 1507350, 1, 0, 1507389, 0, 0, 1572886, 1, 0, 1572887, 1, 0, 1572888, 1, 0, 1572889, 1, 0, 1572890, 1, 0, 1572891, 1, 0, 1572892, 1, 0, 1572893, 1, 0, 1572894, 1, 0, 1572895, 1, 0, 1572896, 1, 0, 1572897, 1, 0, 1572898, 1, 0, 1572899, 1, 0, 1572900, 1, 0, 1572901, 1, 0, 1572902, 1, 0, 1572903, 1, 0, 1572904, 1, 0, 1572905, 1, 0, 1572906, 1, 0, 1572907, 1, 0, 1572908, 1, 0, 1572909, 1, 0, 1572910, 1, 0, 1572911, 1, 0, 1572912, 1, 0, 1572913, 1, 0, 1572914, 1, 0, 1572915, 1, 0, 1572916, 1, 0, 1572917, 1, 0, 1572918, 1, 0, 1572919, 1, 0, 1572920, 0, 0, 1572921, 0, 0, 1572922, 0, 0, 1572923, 0, 0, 1572924, 0, 0, 1572925, 0, 0 )

[node name="KinematicBody2D" parent="." instance=ExtResource( 5 )]
position = Vector2( 304, 1502.18 )

[node name="Snail" parent="." instance=ExtResource( 6 )]
position = Vector2( 416, 1510.18 )

[node name="Label" type="Label" parent="."]
margin_left = 560.0
margin_top = 992.0
margin_right = 656.0
margin_bottom = 1040.0
text = "Go Down
|
v"

[node name="Sprite3" type="Sprite" parent="."]
visible = false
position = Vector2( 64, -128 )
texture = ExtResource( 7 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 560, 1344 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2( 176, 688 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 2 )

[node name="Area2D3" type="Area2D" parent="."]
position = Vector2( 192, 96 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
shape = SubResource( 3 )

[node name="Label2" type="Label" parent="."]
margin_left = 16.0
margin_top = 64.0
margin_right = 160.0
margin_bottom = 128.0
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_entered" from="Area2D3" to="." method="_on_Area2D3_body_entered"]
